src/main/java/org/example/interpreter/error/ArgumentListDoesNotMatch.java
package org.example.interpreter.error;

import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;
import lombok.ToString;

@Getter
@RequiredArgsConstructor
@EqualsAndHashCode(callSuper = true)
@ToString(callSuper = true)
public class ArgumentListDoesNotMatch extends CriticalInterpreterException {
}
